--- a/Weather/MainPage.xaml
+++ b/Weather/MainPage.xaml
@@ -2,7 +2,6 @@
     x:Class="Weather.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Weather"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converter="using:Weather.Converter"
@@ -42,49 +41,46 @@
 
             <Border CornerRadius="5 " Margin="20 10 20 10" Padding="8"   BorderThickness="0" Grid.Row="1" Background="#99121212"  >
                 <Viewbox  Margin="6" >
-                
+
                     <Grid Width="800" HorizontalAlignment="Stretch" VerticalAlignment="Stretch">
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="*"/>
-             
+
                         </Grid.RowDefinitions>
 
-                  
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
-                                <ColumnDefinition Width="*"/>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
+                            <ColumnDefinition Width="*"/>
 
-                            </Grid.ColumnDefinitions>
+                        </Grid.ColumnDefinitions>
 
-
-
-                            <Border Grid.Row="0" Grid.Column="0" Margin="10" Height="45"  BorderBrush="Gray" BorderThickness="0" >
-                        <TextBlock FontSize="20"  FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.Updated, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Updated {0:HH:mm}'}" Foreground="#FF9DF00D"></TextBlock>
-                    </Border>
+                        <Border Grid.Row="0" Grid.Column="0" Margin="10" Height="45"  BorderBrush="Gray" BorderThickness="0" >
+                            <TextBlock FontSize="20"  FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.Updated, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Updated {0:HH:mm}'}" Foreground="#FF9DF00D"></TextBlock>
+                        </Border>
 
                         <Border Grid.Row="0" Grid.Column="1" Margin="10" Height="45"  BorderBrush="Gray" BorderThickness="0" >
-                        <TextBlock Foreground="{x:Bind _viewModel.CurrentWeather.Temperature, Mode=OneWay, Converter={StaticResource TemperatureConverter}}" 
+                            <TextBlock Foreground="{x:Bind _viewModel.CurrentWeather.Temperature, Mode=OneWay, Converter={StaticResource TemperatureConverter}}" 
                                    FontSize="20" 
                                    FontWeight="Bold" 
                                    TextAlignment="Center" 
                                    Text="{x:Bind _viewModel.CurrentWeather.Temperature, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Temp {0:0}° F'}">
 
-                        </TextBlock>
-                    </Border>
+                            </TextBlock>
+                        </Border>
 
                         <Border Margin="10" Grid.Row="0" Grid.Column="2" Height="45"  BorderBrush="Gray" BorderThickness="0" >
-                        <TextBlock FontSize="20" FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.CurrentWeather.Precipitation, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0} Inches Rain'}"></TextBlock>
-                    </Border>
+                            <TextBlock FontSize="20" FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.CurrentWeather.Precipitation, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0} Inches Rain'}"></TextBlock>
+                        </Border>
 
                         <Border Margin="10" Height="45" Grid.Row="1" Grid.Column="0"  BorderBrush="Gray" BorderThickness="0" >
-                        <TextBlock FontSize="20" FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.CurrentWeather.Clouds, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Clouds {0} %'}"></TextBlock>
-                    </Border>
+                            <TextBlock FontSize="20" FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.CurrentWeather.Clouds, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Clouds {0} %'}"></TextBlock>
+                        </Border>
 
                         <Border Margin="10" Height="45" Grid.Row="1" Grid.Column="1"  BorderBrush="Gray" BorderThickness="0" >
-                        <TextBlock FontSize="20" FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.CurrentWeather.WindSpeed, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Wind {0:0} mph'}"></TextBlock>
-                    </Border>
+                            <TextBlock FontSize="20" FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.CurrentWeather.WindSpeed, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Wind {0:0} mph'}"></TextBlock>
+                        </Border>
 
                     </Grid>
                 </Viewbox>
@@ -100,20 +96,28 @@
 
                 <ListView.ItemTemplate>
                     <DataTemplate x:DataType="api:ForecastResponse">
+                        <Viewbox  >
+                            <Border Padding="6"  >
+                                <Grid Width="600" >
 
-                        <Border Padding="6"  >
-                            <VariableSizedWrapGrid  
-                                ItemWidth="110" 
-                                Orientation="Horizontal" >
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
+                                        <ColumnDefinition Width="*"/>
 
-                                <TextBlock FontSize="16" FontWeight="Bold" Margin="15 0 0 0" Text="{x:Bind ForecastTime, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:ddd H:mm}'}"></TextBlock>
-                                <TextBlock FontSize="18" Margin="15 0 0 0" FontWeight="Bold" Foreground="{x:Bind Temperature, Mode=OneWay, Converter={StaticResource TemperatureConverter}}"   Text="{x:Bind Temperature, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0}° F'}"></TextBlock>
-                                <TextBlock FontSize="16" FontWeight="Bold" Margin="15 0 0 0" Text="{x:Bind Precipitation, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0} Inches'}"></TextBlock>
-                                <TextBlock FontSize="16" FontWeight="Bold" Margin="15 0 0 0" Text="{x:Bind  Clouds, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0}%'}"></TextBlock>
-                                <TextBlock FontSize="16" FontWeight="Bold" Margin="15 0 0 0" Text="{x:Bind WindSpeed, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0} mph'}"></TextBlock>
-                              
-                            </VariableSizedWrapGrid>
-                        </Border>
+                                    </Grid.ColumnDefinitions>
+
+                                    <TextBlock FontSize="16" FontWeight="Bold" Margin="15 0 0 0" Text="{x:Bind ForecastTime, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:ddd H:mm}'}"></TextBlock>
+                                    <TextBlock Grid.Column="1" FontSize="18" Margin="15 0 0 0" FontWeight="Bold" Foreground="{x:Bind Temperature, Mode=OneWay, Converter={StaticResource TemperatureConverter}}"   Text="{x:Bind Temperature, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0}° F'}"></TextBlock>
+                                    <TextBlock Grid.Column="2" FontSize="16" FontWeight="Bold" Margin="15 0 0 0" Text="{x:Bind Precipitation, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0} Inches'}"></TextBlock>
+                                    <TextBlock Grid.Column="3" FontSize="16" FontWeight="Bold" Margin="15 0 0 0" Text="{x:Bind  Clouds, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0}%'}"></TextBlock>
+                                    <TextBlock Grid.Column="4" FontSize="16" FontWeight="Bold" Margin="15 0 0 0" Text="{x:Bind WindSpeed, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0:0} mph'}"></TextBlock>
+
+                                </Grid>
+                            </Border>
+                        </Viewbox>
 
                     </DataTemplate>
 
@@ -121,13 +125,7 @@
 
             </ListView>
 
-
         </Grid>
-
-
-
-
-
 
     </Grid>
 </Page>
