--- a/Weather/MainPage.xaml
+++ b/Weather/MainPage.xaml
@@ -56,11 +56,8 @@
 
                         </Grid.ColumnDefinitions>
 
-                        <Border Grid.Row="0" Grid.Column="0" Margin="10" Height="45"  BorderBrush="Gray" BorderThickness="0" >
-                            <TextBlock FontSize="20"  FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.Updated, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Updated {0:HH:mm}'}" Foreground="#FF9DF00D"></TextBlock>
-                        </Border>
 
-                        <Border Grid.Row="0" Grid.Column="1" Margin="10" Height="45"  BorderBrush="Gray" BorderThickness="0" >
+                        <Border Grid.Row="0" Grid.Column="0" Margin="10" Height="45"  BorderBrush="Gray" BorderThickness="0" >
                             <TextBlock Foreground="{x:Bind _viewModel.CurrentWeather.Temperature, Mode=OneWay, Converter={StaticResource TemperatureConverter}}" 
                                    FontSize="20" 
                                    FontWeight="Bold" 
@@ -70,17 +67,26 @@
                             </TextBlock>
                         </Border>
 
-                        <Border Margin="10" Grid.Row="0" Grid.Column="2" Height="45"  BorderBrush="Gray" BorderThickness="0" >
+                        <Border Margin="10" Grid.Row="0" Grid.Column="1" Height="45"  BorderBrush="Gray" BorderThickness="0" >
                             <TextBlock FontSize="20" FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.CurrentWeather.Precipitation, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}{0} Inches Rain'}"></TextBlock>
                         </Border>
 
-                        <Border Margin="10" Height="45" Grid.Row="1" Grid.Column="0"  BorderBrush="Gray" BorderThickness="0" >
+                        <Border Margin="10" Height="45" Grid.Row="0" Grid.Column="2"  BorderBrush="Gray" BorderThickness="0" >
                             <TextBlock FontSize="20" FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.CurrentWeather.Clouds, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Clouds {0} %'}"></TextBlock>
                         </Border>
 
-                        <Border Margin="10" Height="45" Grid.Row="1" Grid.Column="1"  BorderBrush="Gray" BorderThickness="0" >
+                        <Border Margin="10" Height="45" Grid.Row="1" Grid.Column="0"  BorderBrush="Gray" BorderThickness="0" >
                             <TextBlock FontSize="20" FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.CurrentWeather.WindSpeed, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Wind {0:0} mph'}"></TextBlock>
                         </Border>
+
+                        <Border Grid.Row="1" Grid.Column="1" Margin="10" Height="45"  BorderBrush="Gray" BorderThickness="0" >
+                            <TextBlock FontSize="20"  FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.Updated, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Updated {0:HH:mm}'}"></TextBlock>
+                        </Border>
+
+                        <Border Margin="10" Height="45" Grid.Row="1" Grid.Column="2"  BorderBrush="Gray" BorderThickness="0" >
+                            <TextBlock FontSize="20" FontWeight="Bold" TextAlignment="Center" Text="{x:Bind _viewModel.NextRefresh, Mode=OneWay, Converter={StaticResource StringFormatConverter}, ConverterParameter='{}Update in {0:m\\\\:ss}'}"></TextBlock>
+                        </Border>
+
 
                     </Grid>
                 </Viewbox>
